# okf-schema

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/gh-release-notes/: SKILL.md
.github/skills/okfkb-gardening/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/source/: api.md  cli.md  conf.py  index.md  installation.md
docs/source/_static/: changelog.js  custom.css  okfkb-hw-debugging-overview.prompt.md
docs/source/explanation/: design-principles.md  index.md  okfkb-choices.md  opinionated-knowledge-base.md
docs/source/how-to/: bootstrap-knowledge-base.md  index.md  lint-before-commit.md  maintain-okfkb-with-skills.md  migrate-existing-docs.md  setup-okfkb.md  validate-in-ci.md  validate-standalone-files.md  write-custom-schema.md
docs/source/reference/: api.md  cli.md  index.md  kb-commands.md  models.md  okf-schema-vs-spec.md  validation-codes.md
docs/source/tutorials/: getting-started.md  index.md  knowledge-graph.md  okfkb-hw-debugging-workflow.md
examples/ai-llm-knowledge-base/: index.md  log.md
examples/ai-llm-knowledge-base/_schema/: _base.schema.yml  concept.schema.yaml  paper.schema.json5  tool.schema.json
examples/ai-llm-knowledge-base/concepts/: function-calling.md  index.md  rag.md  react-pattern.md
examples/ai-llm-knowledge-base/papers/: attention-is-all-you-need.md  chain-of-thought-paper.md  index.md  toolformer.md
examples/ai-llm-knowledge-base/some/: concept.md  index.md
examples/ai-llm-knowledge-base/tools/: index.md  langchain.md  ollama.md  pytest.md
examples/specific-hw-knowledge-base/: index.md  log.md
examples/specific-hw-knowledge-base/_schema/: Hypothesis.schema.yaml  Outcome.schema.yaml  Playbook.schema.yaml  Principle.schema.yaml  Reference.schema.yaml  Structure.schema.yaml
examples/specific-hw-knowledge-base/findings/: 2026.07.04-15.05-hw-failure-investigation.md  2026.07.04-21.35-hw-failure-investigation.md  index.md
skills/: README.md
skills-evals/: METHODOLOGY.md  eval-runner.sh  eval-viewer.py  eval-viewer.sh  eval.prompt.md  evals.json  grade-eval.py  plan.md
skills-evals/fixtures/bootstrap-output/: index.md  log.md
skills-evals/fixtures/bootstrap-output.backup/: log.md
skills-evals/fixtures/comment-preservation-trap/: concept.md  index.md  log.md
skills-evals/fixtures/conformant-bundle/: index.md
skills/okf-schema/: SKILL.md
skills/okfkb/: SKILL.md
skills/okfkb-gardening/: SKILL.md
src/okf_schema/: __init__.py  api.py  cli.py  formatter.py  validator.py
src/okf_schema/kb/: __init__.py  (+6 more)
tests/: __init__.py  conftest.py  test_api.py  test_cli_core.py  test_cli_remaining.py  test_edge_cases.py  test_formatter.py  test_integration.py  test_internal.py  test_kb_cli.py  test_kb_finding.py  test_kb_install.py  test_kb_navigate.py  test_kb_patterns.py  test_kb_scaffold.py  test_package.py  test_validator.py
(+364 files in other folders)
